--- a/about.html
+++ b/about.html
@@ -26,6 +26,10 @@
       integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
       crossorigin="anonymous"
     ></script>
+    <meta
+      name="description"
+      content="This is a website about work expirience of Paulina Prassol Braz a future front-end developer"
+    />
     <title>About Paulina Prassol Braz</title>
   </head>
   <body>
@@ -53,7 +57,7 @@
             <a class="nav-link" href="about.html#contact">Contact me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link" href="/">Home</a>
           </li>
         </ul>
       </div>
@@ -76,22 +80,34 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col-sm-4">
-          <img src="images/yoga.png" class="img-fluid p-2 shadow-m rounded" />
+          <img
+            src="images/yoga.png"
+            class="img-fluid p-2 shadow-m rounded"
+            alt="Woman excercising yoga"
+          />
         </div>
         <div class="col-sm-4">
           <img
             src="images/weather.png"
             class="img-fluid p-2 shadow-m rounded"
+            alt="weather app"
           />
         </div>
         <div class="col-sm-4">
-          <img src="images/yogurt.png" class="img-fluid p-2 shadow-m rounded" />
+          <img
+            src="images/yogurt.png"
+            class="img-fluid p-2 shadow-m rounded"
+            alt="healty yogurt"
+          />
         </div>
       </div>
     </div>
     <div id="contact">
       <h2>📮 Contact me</h2>
-      <a href="mailto:prasolpaulina@gmail.com" class="email-link"
+      <a
+        href="mailto:prasolpaulina@gmail.com"
+        class="email-link"
+        title="Contact Paulina Prassol Braz"
         >prasolpaulina@gmail.com</a
       >
     </div>
