--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
       integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
       crossorigin="anonymous"
     ></script>
-    <title>Paulina Prassol Braz</title>
+    <meta name="description" content="This are the amazing projects that Paulina Prassol Braz created in 2023">
+    <title>Paulina Prassol Braz - projects as front-end developer </title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-      <a class="navbar-brand" href="index.html">Paulina Prassol Braz</a>
+      <a class="navbar-brand" href="/">Paulina Prassol Braz</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -62,13 +63,13 @@
     <h1>Paulina Prassol Braz</h1>
     <h3>❤ Front-end developer, based in Portugal ❤</h3>
     <div class="navigation-links">
-      <a href="about.html#contact" class="contact-link">Contact me</a>
-      <a href="about.html" class="about-link">About me</a>
+      <a href="about.html#contact" class="contact-link" title="Contact Paulina Prassol Braz">Contact me</a>
+      <a href="about.html" class="about-link" title="Learn more about Paulina Prassol Braz">About me</a>
     </div>
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <img src="images/yoga.png" class="img-fluid rounded" alt="" />
+          <img src="images/yoga.png" class="img-fluid rounded" alt="Woman excercising yoga" />
         </div>
         <div class="col-md-6">
           <h2 class="mb-3">Yoga app</h2>
@@ -79,7 +80,7 @@
             explicabo eum dolore.
           </p>
         <div class="mt-5">
-          <a href="#" class="primary-link">Launch Yoga App</a>
+          <a href="#" class="primary-link" title="Paulina Prassol Yoga App">Launch Yoga App</a>
         </div>
       </div>
     </div>
@@ -93,15 +94,15 @@
           explicabo eum dolore.
         </p>
         <div class="mb-5 mt-5">
-          <a href="#" class="primary-link">Launch Weather App</a>
+          <a href="#" class="primary-link" title="Pauina Prassol Weather App">Launch Weather App</a>
         </div>
       </div>
       <div class="col-md-6">
-        <img src="images/weather.png" class="img-fluid rounded" />
+        <img src="images/weather.png" class="img-fluid rounded" alt="weather app" />
       </div>
       <div class="row mt-5">
         <div class="col-md-6">
-          <img src="images/yogurt.png" class="img-fluid rounded" />
+          <img src="images/yogurt.png" class="img-fluid rounded" alt="Healty Yougurt"/>
         </div>
         <div class="col-md-6">
           <h2 class="mb-3">Yogurt app</h2>
@@ -112,7 +113,7 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Yogurt App</a>
+            <a href="#" class="primary-link" title="Paulina Prassol Yogurt App">Launch Yogurt App</a>
           </div>
         </div>
       </div>
