--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-      <a class="navbar-brand" href="/">Paulina Prassol Braz</a>
+      <a class="navbar-brand" href="index.html">Paulina Prassol Braz</a>
       <button
         class="navbar-toggler"
         type="button"
