--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
             <a class="nav-link" href="about.html#contact">Contact me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/">Home</a>
+            <a class="nav-link" href="index.html">Home</a>
           </li>
         </ul>
       </div>
