--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top mb-5">
-      <a class="navbar-brand" href="about.html">Paulina Prassol Braz</a>
+      <a class="navbar-brand" href="/about.html">Paulina Prassol Braz</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -54,10 +54,10 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html#contact">Contact me</a>
+            <a class="nav-link" href="/about.html#contact">Contact me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link" href="/">Home</a>
           </li>
         </ul>
       </div>
@@ -81,21 +81,21 @@
       <div class="row mb-5">
         <div class="col-sm-4">
           <img
-            src="images/yoga.png"
+            src="/images/yoga.png"
             class="img-fluid p-2 shadow-m rounded"
             alt="Woman excercising yoga"
           />
         </div>
         <div class="col-sm-4">
           <img
-            src="images/weather.png"
+            src="/images/weather.png"
             class="img-fluid p-2 shadow-m rounded"
             alt="weather app"
           />
         </div>
         <div class="col-sm-4">
           <img
-            src="images/yogurt.png"
+            src="/images/yogurt.png"
             class="img-fluid p-2 shadow-m rounded"
             alt="healty yogurt"
           />
