--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-      <a class="navbar-brand" href="index.html">Paulina Prassol Braz</a>
+      <a class="navbar-brand" href="/">Paulina Prassol Braz</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -51,10 +51,10 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About me</a>
+            <a class="nav-link" href="/about.html">About me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html#contact">Contact me</a>
+            <a class="nav-link" href="/about.html#contact">Contact me</a>
           </li>
         </ul>
       </div>
@@ -63,13 +63,13 @@
     <h1>Paulina Prassol Braz</h1>
     <h3>❤ Front-end developer, based in Portugal ❤</h3>
     <div class="navigation-links">
-      <a href="about.html#contact" class="contact-link" title="Contact Paulina Prassol Braz">Contact me</a>
-      <a href="about.html" class="about-link" title="Learn more about Paulina Prassol Braz">About me</a>
+      <a href="/about.html#contact" class="contact-link" title="Contact Paulina Prassol Braz">Contact me</a>
+      <a href="/about.html" class="about-link" title="Learn more about Paulina Prassol Braz">About me</a>
     </div>
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <img src="images/yoga.png" class="img-fluid rounded" alt="Woman excercising yoga" />
+          <img src="/images/yoga.png" class="img-fluid rounded" alt="Woman excercising yoga" />
         </div>
         <div class="col-md-6">
           <h2 class="mb-3">Yoga app</h2>
@@ -98,11 +98,11 @@
         </div>
       </div>
       <div class="col-md-6">
-        <img src="images/weather.png" class="img-fluid rounded" alt="weather app" />
+        <img src="/images/weather.png" class="img-fluid rounded" alt="weather app" />
       </div>
       <div class="row mt-5">
         <div class="col-md-6">
-          <img src="images/yogurt.png" class="img-fluid rounded" alt="Healty Yougurt"/>
+          <img src="/images/yogurt.png" class="img-fluid rounded" alt="Healty Yougurt"/>
         </div>
         <div class="col-md-6">
           <h2 class="mb-3">Yogurt app</h2>
